tests/invalid/ArrayAccess_Invalid_1.whiley
function f(int[] xs, bool y) -> int:
    return xs[y]
